--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -71,4 +71,16 @@
         android:id="@+id/radioButton7"
         android:layout_below="@+id/radioButton6"
         android:layout_alignRight="@+id/textView2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:id="@+id/button2"
+        android:layout_below="@+id/radioButton7"
+        android:layout_alignRight="@+id/radioButton7"
+        android:layout_alignEnd="@+id/radioButton7"
+        android:layout_marginTop="41dp"
+        android:layout_alignLeft="@+id/radioButton7"
+        android:layout_alignStart="@+id/radioButton7" />
 </RelativeLayout>
